<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="@dimen/size_10dp"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:layout_marginTop="@dimen/size_10dp"
        android:id="@+id/type_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/retype_password"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:layout_marginTop="@dimen/size_10dp"
        android:visibility="gone"
        android:id="@+id/retype_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:id="@+id/login_signup_button"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20dp"
        android:textColor="@color/purple_700"
        android:text="@string/signup"
        android:onClick="signup"/>

</LinearLayout>